# renquant-base-data

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  renquant_repo.yml
.github/workflows/: ci.yml
manifests/: crypto-ohlcv-1d.json  crypto-ohlcv-1h.json  example-dataset.json  sec-fundamentals-daily.json  sleeve-ohlcv-1d.json  track-b-bull-calm-feature-readiness.json
tests/: rawlabel_sidecar_columns_179.json  test_alpaca_common.py  test_alpaca_daily_refresh.py  test_alpha158_fund_panel.py  test_alpha158_ops.py  test_alpha158_qlib_panel.py  test_analyst_estimates.py  test_backfill_grades_historical.py  test_crypto_alpha158_panel.py  test_crypto_bars.py  test_crypto_trend_signal.py  test_crypto_vol_rank.py  test_data_manifest_validation.py  test_data_registry.py  test_earnings_surprise_refresh.py  test_fetchers_lift.py  test_finnhub_analyst_ratings.py  test_fmp_analyst_ratings.py  test_fmp_estimate_revisions.py  test_fmp_fundamentals_5y.py  test_fund_feed_provenance.py  test_loaders_import.py  test_market_calendar_repoint.py  test_net_safety_imports.py  test_no_large_files.py  test_ohlcv_incremental_freshness.py  test_pit_feature_builder.py  test_pit_revision_features.py  test_rawlabel_sidecar.py  test_rawlabel_sidecar_schema_export.py  test_resolve_alpha_freshest.py  test_sec_edgar_companyfacts_harvester.py  test_sec_fund_ratio_coverage.py  test_sec_fundamentals.py  test_serving_axis_decoupled.py  test_sidecar_sanity_contract_scan.py  test_sleeve_bars.py  test_track_b_features.py  test_track_b_readiness.py  test_transformer_corpus.py  (+1 more)
(+68 files in other folders)
