[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-base-data"
version = "0.3.0"
description = "Data manifests and validation workflows for RenQuant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "renquant-common>=0.13,<1.0",  # market_calendar B5 + ALWAYS_OPEN calendar (common#27) + pair_slug (common#29) -- D-C1 complete
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../renquant-common/src"]
testpaths = ["tests"]
